Fix topic image stretch in Safari (#739)

--- a/h5p-bildetema-words-topic-image/src/components/TopicImageSVG/TopicImageSVG.module.scss
+++ b/h5p-bildetema-words-topic-image/src/components/TopicImageSVG/TopicImageSVG.module.scss
@@ -35,6 +35,7 @@
 }
 
 .imageContainer {
+  display: inline-flex;
   position: relative;
   max-height: calc(100vh - 5rem); // Compensate for mobile header height
   width: 100%;
